feat: update thesis document to reflect new GitHub repository link for next location prediction project

--- a/docs/Thesis.tex
+++ b/docs/Thesis.tex
@@ -67,7 +67,7 @@
 \advisor{\\\vspace{0.25cm}Dra. Aymée de los Ángeles Marrero Severo\\\vspace{0.2cm}Lic. Ernesto Alfonso Hernández}
 \degree{Licenciado en Ciencia de la Computación}
 \faculty{Facultad de Matemática y Computación}
-\date{Febrero 2025\\\vspace{0.25cm}\href{https://github.com/YoanRene/My-Thesis}{github.com/YoanRene/My-Thesis}}
+\date{Febrero 2025\\\vspace{0.25cm}\href{https://github.com/YoanRene/SB-Next-Location-Prediction}{github.com/YoanRene/SB-Next-Location-Prediction}}
 \logo{Graphics/uhlogo}
 \makenomenclature
 
