--- a/docs/BackMatter/Recomendations.tex
+++ b/docs/BackMatter/Recomendations.tex
@@ -1,5 +1,5 @@
 \begin{recomendations}
-    A partir de los resultados, proponemos las siguientes 
+    A partir de los resultados, se proponen las siguientes 
     recomendaciones para futuras investigaciones y aplicaciones:
 
 \begin{itemize}
