--- a/docs/FrontMatter/SupervisorOpinion.tex
+++ b/docs/FrontMatter/SupervisorOpinion.tex
@@ -1,40 +1,86 @@
 \begin{opinion}
-    El presente trabajo de diploma aborda un problema relevante 
-    en el ámbito de la movilidad humana, combinando técnicas de 
-    aprendizaje profundo con el análisis de sentimientos para la 
-    predicción de la siguiente ubicación de un individuo. 
-    A lo largo del desarrollo de la investigación, el autor ha 
-    demostrado una gran capacidad de análisis y síntesis, logrando 
-    integrar conceptos complejos de modelado de secuencias, 
-    procesamiento de datos espaciales y técnicas de inteligencia artificial.
 
-Uno de los mayores aciertos de la investigación radica en la exploración 
-del contexto basado en sentimientos como un factor que influye en 
-la predicción de movilidad, lo cual constituye un enfoque innovador en
-el campo. Si bien los resultados experimentales 
-no evidenciaron una mejora estadísticamente significativa con la 
-incorporación de esta variable, el enfoque abre nuevas líneas de 
-investigación en la intersección entre el comportamiento humano y 
-la inteligencia artificial aplicada a la movilidad.
+    El trabajo de diploma \textbf{Predicción de la siguiente ubicación utilizando contexto
+    basado en sentimientos}, presentado por el estudiante \textbf{Yoan René Ramos
+    Corrales}, para optar por el título de licenciado en Ciencia de la Computación, se
+    corresponde con intereses del grupo de Modelación Biomatemática de la facultad
+    de Matemática y Computación con el objetivo de explorar y proponer nuevas
+    estrategias en el modelado, solución y manejo de problemas aplicados a las
+    biociencias.
 
-El autor ha mostrado capacidad para el desarrollo experimental, 
-la implementación de modelos avanzados y el análisis crítico de los 
-resultados. Asimismo, la organización del documento y la 
-claridad expositiva hacen que la lectura sea fluida y comprensible. 
-Se reconoce el esfuerzo en la recopilación de datos, la validación 
-de hipótesis y la aplicación de metodologías rigurosas.
+    Cuando hice propuestas para temas de diploma, entre mis aspiraciones estaba
+    obtener una segunda versión de una \textbf{Simulación computacional para la
+    dinámica de enfermedades transmitidas por vectores}, defendida el año
+    anterior por el ya licenciado y tutor de esta tesis Ernesto Alfonso Hernández, pero
+    la creatividad de Yoan René me llevó por otros derroteros, aunque la relación
+    entre ellos, permite augurar provecho para investigaciones futuras y el
+    perfeccionamiento de ambas metodologías.
 
-En conclusión, se considera un buen trabajo de investigación, tanto en su planteamiento 
-teórico como en su implementación experimental. Representa una contribución 
-al campo de la predicción de movilidad y establece nuevas bases 
-para futuras investigaciones que incorporen variables contextuales en modelos 
-de aprendizaje profundo. Por todo lo mencionado, se recomienda entonces una buena calificación.\\
+    Desde un inicio, Yoan René fue muy independiente y resuelto, aunque manejó
+    varias opciones antes de la decisión final. Era como si hubiera construido en su
+    cerebro la heurística que seguiría para lograr sus objetivos.
+
+    Para desarrollar este trabajo de tesis, el diplomante tuvo que realizar una amplia
+    investigación en temas que no forman parte del currículo de pregrado y que
+    además muchas resultan muy actuales y novedosas y se renuevan con mucha
+    rapidez. Los pasos para lograr los objetivos específicos, incluyeron la formulación
+    de un modelo para predecir la siguiente ubicación de un individuo a partir de la
+    combinación del contexto espacio-temporal considerando algunos sentimientos
+    como variable de estudio para mejorar la precisión de la predicción. Para ello,
+    propone un modelo de aprendizaje profundo lo que le permitió considerar
+    dependencias entre variables y determinar cómo los estados de un individuo
+    afectan la elección de su siguiente ubicación.
+
+    Debo confesar que a mí, el título no me gusta mucho, quizás por lo evidente, pero
+    el trabajo es de Yoan René, con una importante asesoría de Ernesto y se merece
+    el privilegio de esa elección por la independencia y creatividad con que ha
+    trabajado.
+
+    Yo soy una profesora dichosa porque he tenido la dicha en muchas ocasiones de
+    que me hayan elegido como tutora (debería ser más como consultante)
+    estudiantes con muy buena preparación, muy buenas ideas y muchos deseos de
+    presentar trabajos de tesis interesantes y útiles. Y Yoan René, lo confirma.
+
+    Como afirma el diplomante en las Conclusiones de su trabajo, esta investigación
+    además, ha comparado el modelo propuesto que incorpora el contexto de
+    sentimientos inferidos mediante un modelo de lenguaje analizando su desempeño
+    comparándolo con diferentes modelos para la predicción de la próxima ubicación
+    de usuarios usando conjunto de datos Geolife y el modelo basado en MHSA
+    Transformer. Y aunque los resultados mostraron que la inclusión del contexto de
+    sentimientos no reportó mejoras estadísticamente significativas, su potencial
+    utilidad podría depender de la calidad de la inferencia emocional y del tipo de
+    movilidad analizada y desde ya propone en sus Recomendaciones, entre otras
+    investigaciones futuras, el uso de fuentes de datos adicionales, como interacciones
+    en redes sociales, encuestas directas o datos biométricos, que puedan
+    proporcionar una inferencia más precisa y menos ruidosa de los sentimientos, para
+    manejar mejor el estado emocional de las personas y esto nos esperanza por la
+    repercusión que tendrían estos estudios en la predicción de enfermedades
+    contagiosas.
+
+    Muy parecido a como me pasó con su tutor, me sorprendió favorablemente la
+    buena calidad ortográfica y de redacción del documento presentado por Yoan
+    René.
+
+    En un tiempo limitado y superando las dificultades de un contexto como el de
+    nuestro país, máxime en las condiciones actuales de carencias energéticas,
+    representa un reto significativo que el diplomante lograra presentar un trabajo de
+    una calidad indiscutible. De seguro hay mucho que perfeccionar, pero estamos
+    satisfechos con su desempeño, aseguramos que cumple con los requerimientos
+    para optar por el título de licenciado considerando que merece la calificación de
+    Excelente.\\
+
+    Muchas Felicidades!!!
+    
+    
+\begin{figure}[h]
+    \hspace{1.5cm}
+    \vspace{-0.5cm}
+    \includegraphics[width=0.125\textwidth ]{Graphics/firma}   
+\end{figure}
 
 \makebox[5cm]{\hrulefill} 
 
-Lic. Ernesto Alfonso Hern\'andez
+Dra. Aymée Marrero Severo
 
-Cotutor
-
-
+Tutora
 \end{opinion}
