fix: correct grammatical errors in recommendations and acknowledgements sections

--- a/docs/BackMatter/Recomendations.tex
+++ b/docs/BackMatter/Recomendations.tex
@@ -3,6 +3,7 @@
     recomendaciones para futuras investigaciones y aplicaciones:
 
 \begin{itemize}
+
     \item \textbf{Evaluación rigurosa del LLM:} Si se emplea un LLM para 
     la generación de etiquetas de sentimientos, es fundamental realizar 
     una evaluación exhaustiva de su desempeño. Esto incluye verificar 
@@ -30,17 +31,17 @@
     proporcionar una inferencia más precisa y menos ruidosa de los 
     sentimientos.
     
-    \item \textbf{Análisis del impacto del contexto emocional en 
+    \item \textbf{Análisis del impacto del contexto de estado en 
     diferentes escenarios:} Se sugiere evaluar el impacto del contexto 
     de sentimientos en distintos conjuntos de datos de movilidad, 
     especialmente en entornos donde las decisiones de movimiento pueden 
     estar más influenciadas por factores emocionales.
     
-    \item \textbf{Validación en contextos reales:} Para evaluar la 
-    aplicabilidad práctica de los modelos, se recomienda realizar 
-    pruebas en escenarios reales con usuarios que proporcionen 
-    retroalimentación sobre la precisión de las predicciones y 
-    la relevancia del contexto emocional en su movilidad cotidiana.
+    \item \textbf{Experimentación y visualización de resultados:}  
+    Se recomienda incluir más experimentación para validar el desempeño 
+    de los modelos, así como el uso de gráficos e histogramas que 
+    permitan ilustrar mejor las comparaciones entre los distintos enfoques,  
+    facilitando as\'i la interpretabilidad de los resultados.
 \end{itemize}
 
 En general, estos puntos pueden contribuir a mejorar la precisión de 
