--- a/docs/FrontMatter/Thanks.tex
+++ b/docs/FrontMatter/Thanks.tex
@@ -2,7 +2,7 @@
     Agradezco a mi tutora, Aymée, por sus correcciones y sugerencias, 
     y a mi cotutor, Ernesto, por sus ideas y guía durante el desarrollo 
     de este trabajo. También agradezco a mi fiel lectora, la 
-    periodista Claudia, por sus comentarios y sugerencias.
+    periodista Claudia, por sus comentarios y observaciones.
 
     A mis profesores, por su dedicación, sus exigencias y enseñanzas,
      que no solo han sido fundamentales en mi formación académica, 
